--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.zkage</groupId>
-    <artifactId>kafka-demo1</artifactId>
+    <artifactId>kafka-learn1</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
