--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,7 +21,7 @@ spring:
       properties:
         linger.ms: 0
     consumer:
-      group-id: kafka-demo1-group
+      group-id: kafka-learn01-group
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
